[ref] Remove deprecated methods